Fix background-size auto when no intrinsic size

According to the spec,
https://drafts.csswg.org/css-backgrounds-3/#background-size,
a background-size of "auto" with no intrinsic ratio or size
should use 100% for the auto value.

Instead we were using the positioning area's intrinsic ratio.
Fix it.

R=fmalita@chromium.org
BUG=828842

Cq-Include-Trybots: master.tryserver.blink:linux_trusty_blink_rel;master.tryserver.chromium.linux:linux_layout_tests_slimming_paint_v2
Change-Id: Ia8d665ff2c725c9e40a89c0e160584feedc41b86
Reviewed-on: https://chromium-review.googlesource.com/996214
Commit-Queue: Stephen Chenney <schenney@chromium.org>
Reviewed-by: Florin Malita <fmalita@chromium.org>
Cr-Commit-Position: refs/heads/master@{#548596}
Former-commit-id: 48c774d129845a4734ac955d1d5407069dd066ce